--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,13 @@ minecraft {
     // simply re-run your setup task after changing the mappings to update your workspace.
     mappings = "snapshot_20160312"
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
+    useDepAts = true //JEI
+}
+
+repositories {
+    maven {
+        url "http://dvs1.progwml6.com/files/maven" //JEI
+    }
 }
 
 dependencies {
@@ -65,7 +72,7 @@ dependencies {
     // for more info...
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
-
+    deobfCompile "mezz.jei:jei_1.9:3.2.8.182" //JEI
 }
 
 processResources
