Crossbow cooldown uses vanilla cooldown

--- a/src/main/resources/assets/littlethings/models/item/bejeweledApple.json
+++ b/src/main/resources/assets/littlethings/models/item/bejeweledApple.json
@@ -1,5 +1,5 @@
 {
-  "parent":"littlethings:item/_standard_item",
+  "parent":"item/generated",
   "textures": {
     "layer0":"littlethings:items/bejeweledApple"
   }
