Updated forge to the most recent recommended version

--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 minecraft {
-    version = "${config.mc_version}-${config.forge_version}-${config.mc_version}"
+    version = "${config.mc_version}-${config.forge_version}"
     runDir = "run"
     
     // the mappings can be changed at any time, and must be in the following format.
@@ -75,7 +75,7 @@ dependencies {
     // for more info...
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
-    deobfCompile "mezz.jei:jei_1.9:3.2.8.182" //JEI
+    deobfCompile "mezz.jei:jei_1.9:3.3.3.197" //JEI
 }
 
 processResources
